--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sakib.calculator.com.calculator">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".PercentCalculation" />
-        <activity android:name=".StandardCalculator"></activity>
+        <activity android:name=".StandardCalculator" />
+        <activity android:name=".MusicPlayer" />
+        <activity android:name=".WebViewActivity"></activity>
     </application>
 
 </manifest>
